# dbdb.io

./: .env  .gitignore  .travis.yml  4-8-16 repo instructions  CLAUDE.md  MIGRATION.txt  README.md  dbdb_io2.sql  install_xapian.sh  instructions.txt  manage.py  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  restartdb.sh  travis.yml  xapian_backend.py
.github/: copilot-instructions.md
.github/workflows/: tests.yml
core/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
core/fixtures/: adminuser.json  core_base.json  core_system.json
core/initial_data/: databases.csv
core/migrations/: 0001_initial.py  0002_auto_20171027_2137.py  0003_auto_20171027_2240.py  0004_auto_20171030_2308.py  0005_auto_20171030_2313.py  0006_auto_20171031_2225.py  0007_auto_20171108_2135.py  0008_systemfeatures_description.py  0009_system_view_count.py  0010_auto_20171205_1403.py  0011_remove_systemversion_version_message.py  0012_auto_20171207_1236.py  0013_auto_20171207_1251.py  0014_auto_20180202_0111.py  0015_system_modified.py
core/templates/: base.html
current_data/: README.md  cleanfiles.py  feature_options.json  generate_options_fixtures.py  generate_system_fixtures.py  misc_scripts.py  parse_csv.py  parse_db_data.py  parse_model_data.py  parse_system_data.py  systems.csv  systems.json
current_data/data/: 1010data.txt  4store.txt  AODBM.txt  Accumulo.txt  AceDB.txt  ActorDB.txt  Adabas.txt  Aerospike.txt  Akiban.txt  AkumuliDB.txt  Algebraix.txt  AllegroGraph.txt  Altibase.txt  Amisa_Server.txt  Apollo.txt  ArangoDB.txt  BangDB.txt  BaseX.txt  BayesDB.txt  Berkeley_DB.txt  Bitsy.txt  BlackRay.txt  BlinkDB.txt  BrightstarDB.txt  Bubba.txt  C-Store.txt  CSQL.txt  Caché.txt  Calvin.txt  Cassandra.txt  Cayley.txt  CitusDB.txt  ClearDB.txt  CloudKit.txt  CloudSearch.txt  Cloudant.txt  Clusterpoint.txt  Clustrix.txt  CockroachDB.txt  CodernityDB.txt  (+274 more)
current_data/data_json/: 1010data.json  4store.json  AODBM.json  Accumulo.json  AceDB.json  ActorDB.json  Adabas.json  Aerospike.json  Akiban.json  AkumuliDB.json  Alenka.json  Algebraix.json  AllegroGraph.json  Altibase.json  Amisa Server.json  Apache Derby.json  Apollo.json  ArangoDB.json  AtomicDB.json  Axibase.json  Baidu Tera.json  BangDB.json  BaseX.json  BayesDB.json  Berkeley DB.json  BigchainDB.json  BitYota.json  Bitsy.json  BlackRay.json  Blazegraph.json  BlazingDB.json  BlinkDB.json  BoltDB.json  BrightstarDB.json  Bubba.json  BuntDB.json  C-Store.json  CORAL.json  CSQL.json  Caché.json  (+348 more)
current_data/json_data/: 1010data.json  4store.json  AODBM.json  AceDB.json  (+383 more)
dbdb/: settings.py  test_settings.py  urls.py  wsgi.py
dbdb_io/: settings.py  settings.py-SAMPLE  urls.py  wsgi.py
dbms_library/: settings.py-sample  urls.py  views.py  wsgi.py
deploy/: start_dbdb_wsgi_server.sh  update_dbdb_app.sh
scripts/: collect_repos.sh  process_citations.sh  process_visits.sh  rotate_spotlight.sh
site/: settings.py  urls.py
systems/: README.md  admin.py  forms.py  models.py  serializers.py  urls.py  util.py  views.py
templates/: base.html  entry-base.html  footer.html  navbar.html  robots.txt
website/: README.md  settings.py-SAMPLE  urls.py  views.py  wsgi.py
(+1105 files in other folders)
