[project]
name = "DBDB.io"
version = "2.0.0"
description = "The Database of Databases"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alabaster==0.7.12",
    "annotated-types==0.7.0",
    "anthropic>=0.107.0",
    "anyascii==0.3.2",
    "anyio==4.12.0",
    "asgiref==3.11.0",
    "attrs==25.4.0",
    "babel==2.9.1",
    "beautifulsoup4==4.14.3",
    "bleach==6.4.0",
    "cairocffi==1.7.1",
    "cairosvg==2.9.0",
    "certifi==2025.11.12",
    "cffi==1.17.1",
    "chardet==3.0.4",
    "charset-normalizer==2.0.12",
    "cssselect==1.1.0",
    "cssselect2==0.8.0",
    "defusedxml==0.7.1",
    "django==6.0.5",
    "django-autoslug==1.9.9",
    "django-bootstrap5==25.3",
    "django-colorfield==0.14.0",
    "django-countries==8.2.0",
    "django-environ==0.12.0",
    "django-markdownify==0.9.6",
    "django-meta>=2.5.1",
    "django-recaptcha==3.0.0",
    "django-turnstile>=0.1.3",
    "django-upgrade==1.29.1",
    "djangorestframework==3.16.1",
    "docutils==0.16",
    "easy-thumbnails==2.10.1",
    "filelock==3.20.3",
    "gitpython>=3.1.50",
    "gunicorn==22.0.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.15",
    "imagesize==1.2.0",
    "importlib-metadata==1.6.1",
    "jinja2==2.11.3",
    "joblib==1.5.1",
    "lxml>=6.1.0",
    "markdown==3.10",
    "markupsafe==1.1.1",
    "numpy==1.26.4",
    "ollama==0.6.1",
    "openai>=2.41.0",
    "outcome==1.3.0.post0",
    "packaging==23.1",
    "pandas==2.3.3",
    "pillow>=12.2.0",
    "playwright>=1.60.0",
    "psycopg2>=2.9.11",
    "psycopg2-binary>=2.9.11",
    "pycparser==2.22",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pygithub>=1.54.1",
    "pygments==2.20.0",
    "pyjwt==2.13.0",
    "pyparsing==2.4.7",
    "pypdf2==3.0.1",
    "pyquery==1.4.1",
    "pysocks==1.7.1",
    "python-dateutil==2.9.0.post0",
    "python-gitlab>=8.4.0",
    "python-pptx==1.0.2",
    "pytz==2020.1",
    "reportlab==4.4.2",
    "requests==2.33.0",
    "requests-file==3.0.1",
    "scikit-learn==1.8.0",
    "scipy==1.17.1",
    "selenium==4.39.0",
    "setuptools==80.9.0",
    "six==1.15.0",
    "sniffio==1.3.1",
    "snowballstemmer==2.0.0",
    "sortedcontainers==2.4.0",
    "soupsieve==2.8.4",
    "sqlparse==0.5.4",
    "svglib==1.5.1",
    "threadpoolctl==3.6.0",
    "tinycss2==1.4.0",
    "tldextract==5.3.0",
    "tokenize-rt==6.2.0",
    "trio==0.32.0",
    "trio-websocket==0.12.2",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.2",
    "urllib3==2.7.0",
    "webencodings==0.5.1",
    "websocket-client==1.9.0",
    "wsproto==1.3.2",
    "xlsxwriter==3.2.9",
    "zipp==3.19.1",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B904",  # raise-without-from-inside-except (too noisy for existing code)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
